// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Start Block Alexa 1`] = `
.c5 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c5 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5589eb;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3c6997;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c19 .c4 {
  color: #fff;
}

.c20 .c4 {
  color: #6e849a;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c6 {
  max-width: 100%;
}

.c6 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c3 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c7 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c10 .c11:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c8 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c21 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c15 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c18 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c18:hover {
  color: #4d8de6;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c6"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Home"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Home
        </div>
      </div>
    </div>
    <section
      className="c7"
    >
      <div
        className="c8"
        onMouseDown={[Function]}
      >
        <div
          className="c9 c10"
        >
          <div
            className="c11 c12"
          >
            <div
              className="c13"
            >
              <span
                className="c4 c14"
                color="#5589eb"
                size={16}
              >
                <svg
                  data-file-name="SvgAddTeammate"
                />
              </span>
            </div>
            <span
              className="c15"
            >
              Alexa, open Headspace
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="c1"
  >
    <div
      className="c16"
    >
      <div
        className="c6"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Commands"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Commands
        </div>
      </div>
    </div>
    <section
      className="c7"
    >
      <div
        className="c8"
        onMouseDown={[Function]}
      >
        <div
          className="c9 c10"
        >
          <div
            className="c11 c12"
          >
            <div
              className="c13"
            >
              <span
                className="c4 c17"
                color="#3c6997"
                size={16}
              >
                <svg
                  data-file-name="SvgFlow"
                />
              </span>
            </div>
            <span
              className="c18"
              onClick={[Function]}
            >
              Help
            </span>
          </div>
        </div>
      </div>
      <div
        className="c8"
        onMouseDown={[Function]}
      >
        <div
          className="c9 c10"
        >
          <div
            className="c11 c12"
          >
            <div
              className="c13"
            >
              <span
                className="c4 c17"
                color="#3c6997"
                size={16}
              >
                <svg
                  data-file-name="SvgFlow"
                />
              </span>
            </div>
            <span
              className="c18"
              onClick={[Function]}
            >
              Stop
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Start Block Flow Start Block 1`] = `
.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14 .c11 {
  color: #fff;
}

.c15 .c11 {
  color: #6e849a;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c16 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Flow Name"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Flow Name
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c12"
                color="#279745"
                size={16}
              >
                <svg
                  data-file-name="SvgInFlow"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              Conversation continues here
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Start Block Flow With Commands 1`] = `
.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3c6997;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c12 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #279745;
}

.c12 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c17 .c11 {
  color: #fff;
}

.c18 .c11 {
  color: #6e849a;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c3 {
  max-width: 100%;
}

.c3 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c7 .c8:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c5 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px #5D9DF5;
}

.c16 .c6:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c15:hover {
  color: #4d8de6;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Flow Name"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Flow Name
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c12"
                color="#279745"
                size={16}
              >
                <svg
                  data-file-name="SvgInFlow"
                />
              </span>
            </div>
            <span
              className="c13"
            >
              Conversation continues here
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Commands"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Commands
        </div>
      </div>
    </div>
    <section
      className="c4"
    >
      <div
        className="c5"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c14"
                color="#3c6997"
                size={16}
              >
                <svg
                  data-file-name="SvgFlow"
                />
              </span>
            </div>
            <span
              className="c15"
              onClick={[Function]}
            >
              Flow Command
            </span>
          </div>
        </div>
      </div>
      <div
        className="c16"
        onMouseDown={[Function]}
      >
        <div
          className="c6 c7"
        >
          <div
            className="c8 c9"
          >
            <div
              className="c10"
            >
              <span
                className="c11 c14"
                color="#3c6997"
                size={16}
              >
                <svg
                  data-file-name="SvgFlow"
                />
              </span>
            </div>
            <span
              className="c15"
              onClick={[Function]}
            >
              Contextualized Help
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Start Block Google 1`] = `
.c5 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c5 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #5589eb;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c17 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3c6997;
}

.c17 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c19 .c4 {
  color: #fff;
}

.c20 .c4 {
  color: #6e849a;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  text-overflow: ellipsis;
  padding: 0 42px;
}

.c6 {
  max-width: 100%;
}

.c6 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: auto;
  overflow: hidden;
  color: #62778c;
}

.c3 {
  position: absolute;
  left: 0;
  padding: 0 5px;
}

.c7 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c10 .c11:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c8 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c21 .c9:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c15 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c18 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c18:hover {
  color: #4d8de6;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <div
        className="c6"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Home"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Home
        </div>
      </div>
    </div>
    <section
      className="c7"
    >
      <div
        className="c8"
        onMouseDown={[Function]}
      >
        <div
          className="c9 c10"
        >
          <div
            className="c11 c12"
          >
            <div
              className="c13"
            >
              <span
                className="c4 c14"
                color="#5589eb"
                size={16}
              >
                <svg
                  data-file-name="SvgAddTeammate"
                />
              </span>
            </div>
            <span
              className="c15"
            >
              Hey Google, start Headspace
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="c1"
  >
    <div
      className="c16"
    >
      <div
        className="c6"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          value="Commands"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          Commands
        </div>
      </div>
    </div>
    <section
      className="c7"
    >
      <div
        className="c8"
        onMouseDown={[Function]}
      >
        <div
          className="c9 c10"
        >
          <div
            className="c11 c12"
          >
            <div
              className="c13"
            >
              <span
                className="c4 c17"
                color="#3c6997"
                size={16}
              >
                <svg
                  data-file-name="SvgFlow"
                />
              </span>
            </div>
            <span
              className="c18"
              onClick={[Function]}
            >
              Help
            </span>
          </div>
        </div>
      </div>
      <div
        className="c8"
        onMouseDown={[Function]}
      >
        <div
          className="c9 c10"
        >
          <div
            className="c11 c12"
          >
            <div
              className="c13"
            >
              <span
                className="c4 c17"
                color="#3c6997"
                size={16}
              >
                <svg
                  data-file-name="SvgFlow"
                />
              </span>
            </div>
            <span
              className="c18"
              onClick={[Function]}
            >
              Stop
            </span>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
